<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_image"
    tools:context=".MainActivity"
    android:id="@+id/root_element">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="122dp"
        android:layout_height="128dp"
        app:srcCompat="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/big_five"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        app:srcCompat="@drawable/black_line"
        android:contentDescription="@string/todo" />

    <ImageView

        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/black_line"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/poiret_one"
        android:text="@string/five_factor"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signInButton"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:background="@color/darkBlue"
        android:layout_centerHorizontal="true"

        android:fontFamily="serif"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"

        android:background="@color/darkBlue"
        android:fontFamily="serif"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/vved_dan" />

</RelativeLayout>