<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity"
    android:id="@+id/root_element2">

    <ImageView
        android:id="@+id/number_test_shape"
        android:layout_width="152dp"
        android:layout_height="78dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/test_number"
        app:srcCompat="@drawable/number_test" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/number_test_shape"
        android:layout_marginStart="29dp"
        android:layout_marginTop="42dp"
        android:text="@string/test_number"
        android:textSize="22sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/number_of_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/number_test_shape"
        android:layout_marginStart="102dp"
        android:layout_marginTop="42dp"
        android:text="@string/_1"
        android:textSize="22sp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:id="@+id/question_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/number_test_shape"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/green_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="20dp"
                android:fontFamily="serif"
                android:text="@string/q1green"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poiret_one"
                android:text="@string/middle"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/red_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"

                android:fontFamily="serif"
                android:text="@string/q1red"
                android:textAlignment="center"
                android:textColor="@color/darkRed"
                android:textSize="16sp"/>

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/answer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        >


            <RadioGroup
                android:layout_marginTop="35dp"
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                >

                <RadioButton
                    android:id="@+id/radio_min2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                     />

                <RadioButton
                    android:id="@+id/radio_min1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    />

                <RadioButton
                    android:id="@+id/radio_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    />

                <RadioButton
                    android:id="@+id/radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    />

                <RadioButton
                    android:id="@+id/radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    />
            </RadioGroup>



        <LinearLayout
            android:id="@+id/icons_below_radio"
            android:layout_below="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">


            <ImageView
                android:id="@+id/img-2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="11dp"
                android:layout_weight="1"
                android:contentDescription="@string/min2"
                app:srcCompat="@drawable/shapemin2" />

            <ImageView
                android:id="@+id/img-1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="11dp"
                android:layout_weight="1"
                android:contentDescription="@string/min1"
                app:srcCompat="@drawable/shapemin1" />

            <ImageView
                android:id="@+id/img0"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="11dp"
                android:layout_weight="1"
                android:contentDescription="@string/zero"
                app:srcCompat="@drawable/shape0" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="11dp"
                android:layout_weight="1"
                android:contentDescription="@string/pl1"
                app:srcCompat="@drawable/shape1" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="11dp"
                android:layout_weight="1"
                android:contentDescription="@string/pl2"
                app:srcCompat="@drawable/shape2" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar"
        android:layout_below="@id/answer_layout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        >

        <Button
            android:id="@+id/next_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/darkBlue"
            android:fontFamily="serif"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp">

        </Button>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:max="15"
         />


</RelativeLayout>