<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regEmailField"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            >

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regPassField"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            >

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regNameField"
            android:hint="@string/name"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            >

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regPhoneField"
            android:hint="@string/phone"
            android:inputType="phone"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            >
        </com.rengwuxian.materialedittext.MaterialEditText>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>